CSS fixes for Safari and added whitespaces

--- a/Chrome/glee_chrome/css/jquery.autocomplete.css
+++ b/Chrome/glee_chrome/css/jquery.autocomplete.css
@@ -35,7 +35,7 @@
 }
 
 .glee_ac_loading {
-	background: white url('indicator.gif') right center no-repeat;
+/*  background: white url('indicator.gif') right center no-repeat;*/
 }
 
 .glee_ac_odd {
